refactor: revamp depth system